--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,11 @@
           "builder": "@angular/build:application",
           "options": {
             "stylePreprocessorOptions": {
-              "includePaths": ["src"]
-      },
+              "includePaths": [
+                "src"
+              ]
+            },
+            "outputPath": "dist/portfolio",
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
